[package]
name = "dependabot-config"
version = "0.2.2"
edition = "2021"
rust-version = "1.58"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/dependabot-config"
keywords = ["dependabot", "serde", "serialization"]
categories = ["parser-implementations"]
exclude = ["/.*", "/tools"]
description = """
Structured access to the Dependabot configuration.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"
members = ["tools/codegen"]

# Note: indexmap and serde are public dependencies.
[dependencies]
indexmap = { version = "1.5.2", features = ["std", "serde-1"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_yaml = "0.9"
