[package]
name = "dependabot-config"
version = "0.3.1"
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/dependabot-config"
keywords = ["dependabot", "serde", "serialization"]
categories = ["parser-implementations"]
exclude = ["/.*", "/tools"]
description = """
Structured access to the Dependabot configuration.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"
members = ["tools/codegen"]

[lib]
doc-scrape-examples = false

# Note: indexmap and serde are public dependencies.
[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0.165", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
static_assertions = "1"
