[package]
name = "dependabot-config-internal-codegen"
edition = "2021"

[dependencies]
anyhow = "1"
fs-err = "2"
globset = { version = "0.4", default-features = false }
heck = "0.5"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }

[lints]
workspace = true
