[package]
name = "dependabot-config-internal-codegen"
edition = "2021"

[dependencies]
fs-err = "3"
heck = "0.5"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "printing", "full"] }
test-helper = { features = ["codegen"], git = "https://github.com/taiki-e/test-helper.git", rev = "c78a65c" }

[lints]
workspace = true
